Initial implementation using redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.error.whitelabel.enabled=false
+
+# redis server config
+spring.redis.host=redis-17200.c295.ap-southeast-1-1.ec2.cloud.redislabs.com
+spring.redis.port=11412
+spring.redis.password=SAyzMohGDsDilWjGxoKkNS6bWjLsT39n
+
+# jedis config
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.max-idle=6 # half of max-active
+spring.redis.jedis.pool.min-idle=3 
