--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.error.whitelabel.enabled=false
 
 # redis server config
-spring.redis.host=redis-11412.c295.ap-southeast-1-1.ec2.cloud.redislabs.com
-spring.redis.port=11412
-spring.redis.password=SAyzMohGDsDilWjGxoKkNS6bWjLsT39n
+spring.redis.host=
+spring.redis.port=
+spring.redis.password=
 
 # jedis config
 spring.redis.jedis.pool.max-active=10
