--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.error.whitelabel.enabled=false
 
 # redis server config
-spring.redis.host=
-spring.redis.port=
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
 spring.redis.password=
 
 # jedis config
